--- a/public/clock2/css/style.css
+++ b/public/clock2/css/style.css
@@ -1,41 +1,56 @@
 html, body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  background: #0f3854;
-  background: radial-gradient(ellipse at center, #0a2e38 0%, #000000 70%);
-  background-size: 100%;
+    background: #0f3854;
+    background: radial-gradient(ellipse at center, #0a2e38 0%, #000000 70%);
+    background-size: 100%;
 }
 
 p {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 #clock {
-  font-family: 'Share Tech Mono', monospace;
-  color: #ffffff;
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  color: #daf6ff;
-  text-shadow: 0 0 20px #0aafe6, 0 0 20px rgba(10, 175, 230, 0);
+    font-family: 'Share Tech Mono', monospace;
+    color: #ffffff;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: #daf6ff;
+    text-shadow: 0 0 20px #0aafe6, 0 0 20px rgba(10, 175, 230, 0);
 }
+
 #clock .time {
-  letter-spacing: 0.05em;
-  font-size: 180px;
-  padding: 5px 0;
+    letter-spacing: 0.05em;
+    font-size: 180px;
+    padding: 5px 0;
 }
+
 #clock .date {
-  letter-spacing: 0.1em;
-  font-size: 60px;
+    letter-spacing: 0.1em;
+    font-size: 60px;
 }
+
 #clock .text {
-  letter-spacing: 0.1em;
-  font-size: 12px;
-  padding: 20px 0 0;
+    letter-spacing: 0.1em;
+    font-size: 12px;
+    padding: 20px 0 0;
+}
+
+#clock .timecost {
+    letter-spacing: 0.05em;
+    font-size: 100px;
+    padding: 5px 0;
+}
+
+#clock .updated_at {
+    letter-spacing: 0.05em;
+    font-size: 20px;
+    padding: 5px 0;
 }
